--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,14 +1,22 @@
+.board{  
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    width: 600px;
+    margin: 4 auto;
+}
+
 .square{
-    display:inline;
-    border: 1px solid blue;
-    padding-left: 30px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    display:inline-block;
+    outline: 1px solid black;
+    width: 100%;
+    height:100%;
 }
 
 .row{
-    margin-top: 10px;
-    text-align: center;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .drawn{
